--- a/html/creators.html
+++ b/html/creators.html
@@ -64,13 +64,59 @@
                     who split their time between domestic life and interdimensional adventures.
                     <a href="https://en.wikipedia.org/wiki/Rick_and_Morty" target="_blank">Source</a>
                 </p>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="row justify-content-center mt-3">
+        <div class="card" style="width: 40rem;">
+            <div class="card-body text-center">
+                <h2 class="card-title">Ratings</h2>
+
+                <table class="table table-success table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th scope="col">Season</th>
+                            <th scope="col">Rotten Tomatoes</th>
+                            <th scope="col">Metacritic</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>96%</td>
+                            <td>85</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td>91%</td>
+                            <td>86</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>96%</td>
+                            <td>88</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">4</th>
+                            <td>94%</td>
+                            <td>84</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">5</th>
+                            <td>95%</td>
+                            <td>89</td>
+                        </tr>
+                    </tbody>
+                </table>
+
             </div>
         </div>
     </div>
 
 
 </body>
-
 <script src="../javascript/creators.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
