--- a/html/creators.html
+++ b/html/creators.html
@@ -41,7 +41,7 @@
     </nav>
 
     <div class="row justify-content-center mt-5">
-        <div class="card" style="width: 40rem;">
+        <div class="card bg-light" style="width: 40rem;">
             <div class="card-body text-center">
                 <h2 class="card-title text-decoration-underline">The Creators</h2>
                 <div class="row justify-content-center mb-2">
@@ -56,21 +56,27 @@
                         <p class="card-text">Dan Harmon</p>
                     </div>
                 </div>
-                <p class="text-start" style="text-indent: 2em;">
-                    Rick and Morty is an American adult animated science fiction sitcom created by Justin
-                    Roiland and Dan Harmon for Cartoon Network's nighttime programming block Adult Swim.
-                    The series follows the misadventures of cynical mad scientist Rick Sanchez
-                    and his good-hearted, but fretful grandson Morty Smith,
-                    who split their time between domestic life and interdimensional adventures.
-                    <a href="https://en.wikipedia.org/wiki/Rick_and_Morty" target="_blank">Source</a>
-                </p>
+                <blockquote class="blockquote">
+                    <p class="text-start" style="text-indent: 2em;">
+                        Rick and Morty is an American adult animated science fiction sitcom created by Justin
+                        Roiland and Dan Harmon for Cartoon Network's nighttime programming block Adult Swim.
+                        The series follows the misadventures of cynical mad scientist Rick Sanchez
+                        and his good-hearted, but fretful grandson Morty Smith,
+                        who split their time between domestic life and interdimensional adventures.
+                    </p>
+                </blockquote>
+                <figcaption class="blockquote-footer">
+                    <cite title="Source"><a href="https://en.wikipedia.org/wiki/Rick_and_Morty"
+                            target="_blank">Wikipedia</a></cite>
+                </figcaption>
+
 
             </div>
         </div>
     </div>
 
     <div class="row justify-content-center mt-3">
-        <div class="card" style="width: 40rem;">
+        <div class="card bg-light" style="width: 40rem;">
             <div class="card-body text-center">
                 <h2 class="card-title text-decoration-underline">Ratings</h2>
 
@@ -116,7 +122,7 @@
     </div>
 
     <div class="row justify-content-center mt-3">
-        <div class="card" style="width: 40rem;">
+        <div class="card bg-light" style="width: 40rem;">
             <div class="card-body text-center">
                 <h2 class="card-title text-decoration-underline">Facts</h2>
 
