creator card constructor

--- a/html/creators.html
+++ b/html/creators.html
@@ -40,8 +40,8 @@
         </div>
     </nav>
 
-    <div class="row justify-content-center mt-5">
-        <div class="card bg-light" style="width: 40rem;">
+    <div class="row justify-content-center mt-5" id="creatorCards"></div>
+        <!-- <div class="card bg-light" style="width: 40rem;">
             <div class="card-body text-center">
                 <h2 class="card-title text-decoration-underline">The Creators</h2>
                 <div class="row justify-content-center mb-2">
@@ -69,11 +69,8 @@
                     <cite title="Source"><a href="https://en.wikipedia.org/wiki/Rick_and_Morty"
                             target="_blank">Wikipedia</a></cite>
                 </figcaption>
-
-
-            </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="row justify-content-center mt-3">
         <div class="card bg-light" style="width: 40rem;">
