--- a/html/creators.html
+++ b/html/creators.html
@@ -42,7 +42,7 @@
 
     <div class="row justify-content-center mt-5" id="creatorCards"></div>
 
-    <div class="row justify-content-center mt-3">
+    <div class="row justify-content-center mt-3" id="ratingCard">
         <div class="card bg-light" style="width: 40rem;">
             <div class="card-body text-center">
                 <h2 class="card-title text-decoration-underline">Ratings</h2>
