--- a/html/creators.html
+++ b/html/creators.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
 
-    <div class="row justify-content-center mt-5" id="creatorCards"></div>
+    <div class="row justify-content-center mt-5" id="creatorCard"></div>
 
     <div class="row justify-content-center mt-3" id="ratingCard">
         <div class="card bg-light" style="width: 40rem;">
