--- a/html/portal.html
+++ b/html/portal.html
@@ -40,7 +40,7 @@
             <form class="d-flex d-sm-inline-flex my-2 my-lg-0">
                 <div class="input-group input-group-sm m-auto">
                     <input class="form-control mr-sm-2" id="navsearch" type="search" placeholder="Search Locations"
-                        aria-label="Search">
+                        aria-label="Search" onkeyup="CardSearchFilter()">
                     <button type="button" class="btn btn-dark shadow text-white">Search</button>
                 </div>
             </form>
