--- a/html/portal.html
+++ b/html/portal.html
@@ -55,7 +55,11 @@
         </div>
     </div>
 
-
+    <div class="text-center" id="loadingSpinner">
+        <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
 
     <div class="container mt-2">
         <div class="row" id="cardrow"></div>
