--- a/html/portal.html
+++ b/html/portal.html
@@ -55,8 +55,8 @@
         </div>
     </div>
 
-    <div class="text-center" id="loadingSpinner">
-        <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
+    <div class="text-center">
+        <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status" id="loadingSpinner">
             <span class="visually-hidden">Loading...</span>
         </div>
     </div>
