--- a/html/portal.html
+++ b/html/portal.html
@@ -60,6 +60,26 @@
         </div>
     </div>
 
+    <div class="col-sm-4">
+        <div class="card my-2 bg-transparent text-white" aria-hidden="true">
+            <h5 class="card-header bg-success"><span class="placeholder col-6"></span></h5>
+            <div class="card-body bg-success bg-opacity-75">
+                <h5 class="card-title placeholder-glow">
+                    <span class="placeholder col-6"></span>
+                </h5>
+                <p class="card-text placeholder-glow">
+                    <span class="placeholder col-4"></span>
+                    <span class="placeholder col-4"></span>
+                    <span class="placeholder col-6"></span>
+                    <span class="placeholder col-8"></span>
+                </p>
+                <button tabindex="-1" class="btn btn-dark disabled placeholder col-6"></button>
+            </div>
+        </div>
+    </div>
+
+
+
     <div class="container mt-2">
         <div class="row" id="cardrow"></div>
     </div>
