commented out for now

--- a/html/portal.html
+++ b/html/portal.html
@@ -60,7 +60,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <!-- <div class="container" id="placeholders">
         <div class="row">
             <div class="col-sm-4">
                 <div class="card my-2 bg-transparent text-white " aria-hidden="true">
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
 
