--- a/html/portal.html
+++ b/html/portal.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class="text-center">
-        <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status" id="loadingSpinner">
+        <div class="spinner-border text-primary mt-1 position-absolute top-50 start-50 translate-middle" style="width: 3rem; height: 3rem; z-index: 10;" role="status" id="loadingSpinner">
             <span class="visually-hidden">Loading...</span>
         </div>
     </div>
