--- a/html/portal.html
+++ b/html/portal.html
@@ -54,8 +54,9 @@
         </div>
     </div>
 
-    <div class="text-center">
-        <div class="spinner-border text-primary mt-1 position-absolute top-50 start-50 translate-middle" style="width: 3rem; height: 3rem; z-index: 10;" role="status" id="loadingSpinner">
+    <div class="text-center position-absolute top-50 start-50 translate-middle" style="z-index: 100;">
+        <div class="spinner-border text-primary mt-1" style="width: 4rem; height: 4rem;" role="status"
+            id="loadingSpinner">
             <span class="visually-hidden">Loading...</span>
         </div>
     </div>
