--- a/html/creators.html
+++ b/html/creators.html
@@ -43,7 +43,7 @@
     <div class="row justify-content-center mt-5" id="creatorCard"></div>
 
     <div class="row justify-content-center mt-3" id="ratingCard">
-        <div class="card bg-light" style="width: 40rem;">
+        <!-- <div class="card bg-light" style="width: 40rem;">
             <div class="card-body text-center">
                 <h2 class="card-title text-decoration-underline">Ratings</h2>
 
@@ -84,7 +84,7 @@
                     </tbody>
                 </table>
 
-            </div>
+            </div> -->
         </div>
     </div>
 
