--- a/html/portal.html
+++ b/html/portal.html
@@ -118,6 +118,19 @@
         <div class="row" id="cardrow"></div>
     </div>
 
+    <div class="container my-2">
+        <div class="btn-toolbar justify-content-center" role="toolbar" aria-label="Toolbar button groups">
+            <div class="btn-group me-2" role="group" aria-label="group">
+                <button type="button" class="btn btn-primary" onclick="CardAndModalBuilder(0)">1</button>
+                <button type="button" class="btn btn-primary" onclick="CardAndModalBuilder(1)">2</button>
+                <button type="button" class="btn btn-primary" onclick="CardAndModalBuilder(2)">3</button>
+                <button type="button" class="btn btn-primary" onclick="CardAndModalBuilder(3)">4</button>
+                <button type="button" class="btn btn-primary" onclick="CardAndModalBuilder(4)">5</button>
+                <button type="button" class="btn btn-primary" onclick="CardAndModalBuilder(5)">6</button>
+            </div>
+        </div>
+    </div>
+
     <div id="modalDiv"></div>
 
 
