--- a/html/portal.html
+++ b/html/portal.html
@@ -121,12 +121,12 @@
     <div class="container my-2">
         <div class="btn-toolbar justify-content-center" role="toolbar" aria-label="Toolbar button groups">
             <div class="btn-group me-2" role="group" aria-label="group">
-                <button type="button" class="btn btn-primary" onclick="PaginationCardBuilder(0)">1</button>
-                <button type="button" class="btn btn-primary" onclick="PaginationCardBuilder(1)">2</button>
-                <button type="button" class="btn btn-primary" onclick="PaginationCardBuilder(2)">3</button>
-                <button type="button" class="btn btn-primary" onclick="PaginationCardBuilder(3)">4</button>
-                <button type="button" class="btn btn-primary" onclick="PaginationCardBuilder(4)">5</button>
-                <button type="button" class="btn btn-primary" onclick="PaginationCardBuilder(5)">6</button>
+                <button type="button" class="btn btn-success" onclick="PaginationCardBuilder(0)">1</button>
+                <button type="button" class="btn btn-success" onclick="PaginationCardBuilder(1)">2</button>
+                <button type="button" class="btn btn-success" onclick="PaginationCardBuilder(2)">3</button>
+                <button type="button" class="btn btn-success" onclick="PaginationCardBuilder(3)">4</button>
+                <button type="button" class="btn btn-success" onclick="PaginationCardBuilder(4)">5</button>
+                <button type="button" class="btn btn-success" onclick="PaginationCardBuilder(5)">6</button>
             </div>
         </div>
     </div>
