--- a/html/index.html
+++ b/html/index.html
@@ -75,6 +75,16 @@
   </div>
 
   <div class="row my-3 justify-content-center" id="cardrow"></div>
+  <nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+      <li class="page-item"><a class="page-link" onclick="">Previous</a></li>
+      <li class="page-item"><a class="page-link" onclick="CharacterCardConstructor(0)">1</a></li>
+      <li class="page-item"><a class="page-link" onclick="CharacterCardConstructor(1)">2</a></li>
+      <li class="page-item"><a class="page-link" onclick="CharacterCardConstructor(2)">3</a></li>
+      <li class="page-item"><a class="page-link" onclick="">Next</a></li>
+    </ul>
+  </nav>
+
 
 </body>
 
