--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../css/main.css">
 </head>
 
-<body class="otherBackground">
+<body class="backgroundImage">
 
   <nav class="navbar navbar-expand-lg" id="navbar">
     <a class="navbar-brand mx-2" href="#">
@@ -44,8 +44,6 @@
             aria-label="Search" oninput="CardSearchFilter()">
         </div>
       </form>
-      <button class="btn btn-dark bg-gradient ms-auto me-3" id="themebutton" onclick="switchTheme()">
-        Dark</button>
     </div>
   </nav>
 
