--- a/html/index.html
+++ b/html/index.html
@@ -76,9 +76,9 @@
   <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-center">
       <li class="page-item"><a class="page-link" onclick="pageChanger(-1)">Previous</a></li>
-      <li class="page-item"><a class="page-link" onclick="CharacterCardConstructor(0)">1</a></li>
-      <li class="page-item"><a class="page-link" onclick="CharacterCardConstructor(1)">2</a></li>
-      <li class="page-item"><a class="page-link" onclick="CharacterCardConstructor(2)">3</a></li>
+      <li class="page-item"><a class="page-link" onclick="CharacterBuilder(0)">1</a></li>
+      <li class="page-item"><a class="page-link" onclick="CharacterBuilder(1)">2</a></li>
+      <li class="page-item"><a class="page-link" onclick="CharacterBuilder(2)">3</a></li>
       <li class="page-item"><a class="page-link" onclick="pageChanger(1)">Next</a></li>
     </ul>
   </nav>
