--- a/html/index.html
+++ b/html/index.html
@@ -73,13 +73,15 @@
   </div>
 
   <div class="row my-3 justify-content-center" id="cardrow"></div>
-  <nav aria-label="Page navigation example">
+  <nav aria-label="Page navigation">
     <ul class="pagination justify-content-center">
-      <li class="page-item"><a class="page-link" onclick="pageChanger(-1)">Previous</a></li>
+      <li class="page-item" id="prev"><a class="page-link" onclick="pageChanger(-1)">Previous</a></li>
       <li class="page-item"><a class="page-link" onclick="CharacterBuilder(0)">1</a></li>
       <li class="page-item"><a class="page-link" onclick="CharacterBuilder(1)">2</a></li>
       <li class="page-item"><a class="page-link" onclick="CharacterBuilder(2)">3</a></li>
-      <li class="page-item"><a class="page-link" onclick="pageChanger(1)">Next</a></li>
+      <li class="page-item"><a class="page-link" onclick="CharacterBuilder(3)">4</a></li>
+      <li class="page-item"><a class="page-link" onclick="CharacterBuilder(4)">5</a></li>
+      <li class="page-item" id="next"><a class="page-link" onclick="pageChanger(1)">Next</a></li>
     </ul>
   </nav>
 
