--- a/html/portal.html
+++ b/html/portal.html
@@ -61,6 +61,8 @@
         </div>
     </div>
 
+    <!-- THINKING ABOUT ADDING PLACEHOLDER LOADING FOR CARDS (NOT STARTED) -->
+
     <!-- <div class="container" id="placeholders">
         <div class="row">
             <div class="col-sm-4">
