--- a/html/creators.html
+++ b/html/creators.html
@@ -17,6 +17,7 @@
         <a class="navbar-brand mx-2" href="index.html">
             <img src="https://i.dlpng.com/static/png/6975728_preview.png" class="pb-2" alt="" width="120" height="45">
         </a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -42,51 +43,7 @@
 
     <div class="row justify-content-center mt-5" id="creatorCard"></div>
 
-    <div class="row justify-content-center mt-3" id="ratingCard">
-        <!-- <div class="card bg-light" style="width: 40rem;">
-            <div class="card-body text-center">
-                <h2 class="card-title text-decoration-underline">Ratings</h2>
-
-                <table class="table table-success table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th scope="col">Season</th>
-                            <th scope="col">Rotten Tomatoes</th>
-                            <th scope="col">Metacritic</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>96%</td>
-                            <td>85</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>91%</td>
-                            <td>86</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>96%</td>
-                            <td>88</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">4</th>
-                            <td>94%</td>
-                            <td>84</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">5</th>
-                            <td>95%</td>
-                            <td>89</td>
-                        </tr>
-                    </tbody>
-                </table>
-
-            </div>
-        </div> -->
-    </div>
+    <div class="row justify-content-center mt-3" id="ratingCard"></div>
 
     <div class="row justify-content-center mt-3">
         <div class="card bg-light" style="width: 40rem;">
@@ -113,6 +70,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingTwo">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -132,6 +90,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingThree">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -151,13 +110,14 @@
                             </div>
                         </div>
                     </div>
-                </div>
 
+                </div>
             </div>
         </div>
     </div>
 
 </body>
+
 <script src="../javascript/creators.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
