small fix search function

--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
       <form class="d-flex d-sm-inline-flex my-2 my-lg-0">
         <div class="input-group input-group-sm m-auto">
           <input class="form-control mr-sm-2" id="navsearch" type="search" placeholder="Search Characters"
-            aria-label="Search" oninput="CardSearchFilter()">
+            aria-label="Search" oninput="cardSearchFilter()">
         </div>
       </form>
     </div>
@@ -74,7 +74,7 @@
 
   <div class="row my-3 justify-content-center" id="cardrow"></div>
 
-  <nav aria-label="Page navigation">
+  <nav aria-label="Page navigation" id="cardRowPage">
     <ul class="pagination justify-content-center" id="paginationList">
       <li class="page-item" id="prev"><a class="page-link" onclick="pageChanger(-1)">Previous</a></li>
       <li class="page-item" id="next"><a class="page-link" onclick="pageChanger(1)">Next</a></li>
