--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
       <form class="d-flex d-sm-inline-flex my-2 my-lg-0">
         <div class="input-group input-group-sm m-auto">
           <input class="form-control mr-sm-2" id="navsearch" type="search" placeholder="Search Characters"
-            aria-label="Search" oninput="cardSearchFilterNumTwo()">
+            aria-label="Search" oninput="cardSearchFilter()">
         </div>
       </form>
     </div>
