--- a/html/creators.html
+++ b/html/creators.html
@@ -51,7 +51,7 @@
                 <h2 class="card-title text-decoration-underline">Facts</h2>
 
                 <div class="accordion" id="accordionParent">
-                    <div class="accordion-item">
+                    <!-- <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
@@ -109,7 +109,7 @@
                                 <code>.accordion-body</code>, though the transition does limit overflow.
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
