--- a/html/creators.html
+++ b/html/creators.html
@@ -48,7 +48,7 @@
     <div class="row justify-content-center mt-3">
         <div class="card bg-light" style="width: 40rem;">
             <div class="card-body text-center">
-                <h2 class="card-title text-decoration-underline">Facts</h2>
+                <h2 class="card-title">Facts</h2>
 
                 <div class="accordion" id="accordionParent">
                     <!-- <div class="accordion-item">
