--- a/html/creators.html
+++ b/html/creators.html
@@ -45,7 +45,7 @@
 
     <div class="row justify-content-center mt-3" id="ratingCard"></div>
 
-    <div class="row justify-content-center mt-3">
+    <div class="row justify-content-center mt-3 mb-3">
         <div class="card bg-light" style="width: 40rem;">
             <div class="card-body text-center">
                 <h2 class="card-title">Facts</h2>
