--- a/html/index.html
+++ b/html/index.html
@@ -81,6 +81,10 @@
     </ul>
   </nav>
 
+  <footer class="text-white text-center">
+    Made using the <a class="text-decoration-none" href="https://rickandmortyapi.com/" target="_blank">Rick & Morty
+      API</a>
+  </footer>
 </body>
 
 <script src="../javascript/app.js"></script>
