--- a/html/portal.html
+++ b/html/portal.html
@@ -79,7 +79,10 @@
     </div>
 
     <div id="modalDiv"></div>
-
+    <footer class="text-white text-center">
+        Made using the <a class="text-decoration-none" href="https://rickandmortyapi.com/" target="_blank">Rick & Morty
+            API</a>
+    </footer>
 </body>
 
 <script src="../javascript/portal.js"></script>
