--- a/html/seasons.html
+++ b/html/seasons.html
@@ -50,7 +50,10 @@
     <div class="container" id="card-container"></div>
 
     <div id="modalDiv"></div>
-
+    <footer class="text-white text-center">
+        Made using the <a class="text-decoration-none" href="https://rickandmortyapi.com/" target="_blank">Rick & Morty
+            API</a>
+    </footer>
 </body>
 
 <script src="../javascript/seasons.js"></script>
