--- a/html/portal.html
+++ b/html/portal.html
@@ -40,7 +40,7 @@
             <form class="d-flex d-sm-inline-flex my-2 my-lg-0">
                 <div class="input-group input-group-sm m-auto">
                     <input class="form-control mr-sm-2" id="navsearch" type="search" placeholder="Search Locations"
-                        aria-label="Search" oninput="CardSearchFilter()">
+                        aria-label="Search" oninput="cardSearchFilter()">
                 </div>
             </form>
         </div>
@@ -68,12 +68,12 @@
     <div class="container my-2">
         <div class="btn-toolbar justify-content-center" role="toolbar" aria-label="Toolbar button groups">
             <div class="btn-group me-2" role="group" aria-label="group">
-                <button type="button" class="btn btn-success" onclick="PaginationCardBuilder(0)">1</button>
-                <button type="button" class="btn btn-success" onclick="PaginationCardBuilder(1)">2</button>
-                <button type="button" class="btn btn-success" onclick="PaginationCardBuilder(2)">3</button>
-                <button type="button" class="btn btn-success" onclick="PaginationCardBuilder(3)">4</button>
-                <button type="button" class="btn btn-success" onclick="PaginationCardBuilder(4)">5</button>
-                <button type="button" class="btn btn-success" onclick="PaginationCardBuilder(5)">6</button>
+                <button type="button" class="btn btn-success" onclick="paginationCardBuilder(0)">1</button>
+                <button type="button" class="btn btn-success" onclick="paginationCardBuilder(1)">2</button>
+                <button type="button" class="btn btn-success" onclick="paginationCardBuilder(2)">3</button>
+                <button type="button" class="btn btn-success" onclick="paginationCardBuilder(3)">4</button>
+                <button type="button" class="btn btn-success" onclick="paginationCardBuilder(4)">5</button>
+                <button type="button" class="btn btn-success" onclick="paginationCardBuilder(5)">6</button>
             </div>
         </div>
     </div>
