fixed card style

--- a/html/creators.html
+++ b/html/creators.html
@@ -41,11 +41,11 @@
         </div>
     </nav>
 
-    <div class="row justify-content-center mt-5" id="creatorCard"></div>
+    <div class="row justify-content-center mt-5 mb-3" id="creatorCard"></div>
 
-    <div class="row justify-content-center mt-3" id="ratingCard"></div>
+    <div class="row justify-content-center my-3" id="ratingCard"></div>
 
-    <div class="row justify-content-center mt-3 mb-3">
+    <div class="row justify-content-center my-3">
         <div class="card bg-light" style="width: 40rem;">
             <div class="card-body text-center">
                 <h2 class="card-title">Facts</h2>
