--- a/html/creators.html
+++ b/html/creators.html
@@ -55,6 +55,10 @@
             </div>
         </div>
     </div>
+
+    <div class="row justify-content-center my-3" id="viewershipCard"></div>
+
+
     <footer class="text-white text-center">
         Made using the <a class="text-decoration-none" href="https://rickandmortyapi.com/" target="_blank">Rick & Morty
             API</a>
