--- a/html/creators.html
+++ b/html/creators.html
@@ -56,7 +56,16 @@
         </div>
     </div>
 
-    <div class="row justify-content-center my-3" id="viewershipCard"></div>
+    <div class="row justify-content-center my-3">
+        <div class="card bg-light" style="width: 40rem;">
+            <div class="card-body text-center">
+                <h2 class="card-title">Viewership</h2>
+
+                <div id="viewershipCard"></div>
+
+            </div>
+        </div>
+    </div>
 
 
     <footer class="text-white text-center">
