--- a/html/creators.html
+++ b/html/creators.html
@@ -58,7 +58,7 @@
 
     <div class="row justify-content-center my-3">
         <div class="card bg-light" style="width: 40rem;">
-            <div class="card-body text-center">
+            <div class="card-body">
                 <h2 class="card-title">Viewership</h2>
 
                 <div id="viewershipCard"></div>
