--- a/html/creators.html
+++ b/html/creators.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-transparent">
         <a class="navbar-brand mx-2" href="index.html">
-            <img src="https://i.dlpng.com/static/png/6975728_preview.png" class="pb-2" alt="" width="120" height="45">
+            <img src="/assets/rick and morty logo top left.png" class="pb-2" alt="" width="120" height="45">
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
