--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
 
   <nav class="navbar navbar-expand-lg" id="navbar">
     <a class="navbar-brand mx-2" href="#">
-      <img src="https://i.dlpng.com/static/png/6975728_preview.png" class="pb-2" alt="" width="120" height="45">
+      <img src="/assets/rick and morty logo top left.png" class="pb-2" alt="" width="120" height="45">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
