--- a/html/creators.html
+++ b/html/creators.html
@@ -41,11 +41,11 @@
         </div>
     </nav>
 
-    <div class="row justify-content-center mt-3 mb-3" id="creatorCard"></div>
+    <div class="row justify-content-center my-3" id="creatorCard"></div>
 
-    <div class="row justify-content-center mt-3 mb-3" id="ratingCard"></div>
+    <div class="row justify-content-center my-3" id="ratingCard"></div>
 
-    <div class="row justify-content-center mt-3 mb-3">
+    <div class="row justify-content-center my-3">
         <div class="card bg-light" style="width: 40rem;">
             <div class="card-body text-center">
                 <h2 class="card-title">Facts</h2>
@@ -56,9 +56,9 @@
         </div>
     </div>
 
-    <div class="row justify-content-center mt-3 mb-3">
-        <div class="card bg-light" style="width: 40rem;">
-            <div class="card-body bg-opacity-75">
+    <div class="row justify-content-center my-3">
+        <div class="card bg-opacity-75" style="width: 40rem; background-color: blueviolet;">
+            <div class="card-body text-white">
                 <h2 class="card-title">Viewership</h2>
 
                 <div id="viewershipCard"></div>
