--- a/html/creators.html
+++ b/html/creators.html
@@ -57,7 +57,7 @@
     </div>
 
     <div class="row justify-content-center my-3">
-        <div class="card bg-opacity-75" style="width: 40rem; background-color: blueviolet;">
+        <div class="card bg-opacity-75" style="width: 40rem; background-color: blueviolet; opacity: 80%;">
             <div class="card-body text-white">
                 <h2 class="card-title">Viewership</h2>
 
