--- a/html/creators.html
+++ b/html/creators.html
@@ -57,9 +57,9 @@
     </div>
 
     <div class="row justify-content-center my-3">
-        <div class="card bg-opacity-75" style="width: 40rem; background-color: blueviolet; opacity: 80%;">
+        <div class="card" style="width: 40rem; background-color: blueviolet;">
             <div class="card-body text-white">
-                <h2 class="card-title">Viewership</h2>
+                <h2 class="card-title text-center" style="text-shadow: 2px 2px 2px #000000;">Viewership</h2>
 
                 <div id="viewershipCard"></div>
 
