--- a/html/creators.html
+++ b/html/creators.html
@@ -57,8 +57,8 @@
     </div>
 
     <div class="row justify-content-center my-3">
-        <div class="card" style="width: 40rem; background-color: blueviolet;">
-            <div class="card-body text-white">
+        <div class="card bg-info bg-gradient" style="width: 40rem;">
+            <div class=" card-body text-white">
                 <h2 class="card-title text-center" style="text-shadow: 2px 2px 2px #000000;">Viewership</h2>
 
                 <div id="viewershipCard"></div>
@@ -68,13 +68,13 @@
     </div>
 
 
-    <footer class="text-white text-center">
+    <footer class="fw-bold text-center">
         Made using the <a class="text-decoration-none" href="https://rickandmortyapi.com/" target="_blank">Rick & Morty
             API</a>
     </footer>
 </body>
 
-<script src="../javascript/creators.js"></script>
+<script type="module" src="../javascript/creators.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
