--- a/html/index.html
+++ b/html/index.html
@@ -72,6 +72,12 @@
     </div>
   </div>
 
+  <div class="text-center position-absolute top-50 start-50 translate-middle" style="z-index: 100;">
+    <div class="spinner-border text-primary mt-1" style="width: 4rem; height: 4rem;" role="status" id="loadingSpinner">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+
   <div class="row my-3 justify-content-center" id="cardrow"></div>
 
   <nav aria-label="Page navigation" id="cardRowPage">
