--- a/html/creators.html
+++ b/html/creators.html
@@ -56,16 +56,7 @@
         </div>
     </div>
 
-    <div class="row justify-content-center my-3">
-        <div class="card bg-info bg-gradient" style="width: 40rem;">
-            <div class=" card-body text-white">
-                <h2 class="card-title text-center" style="text-shadow: 2px 2px 2px #000000;">Viewership</h2>
-
-                <div id="viewershipCard"></div>
-
-            </div>
-        </div>
-    </div>
+    <div class="row justify-content-center my-3" id="viewershipCard"></div>
 
     <footer class="fw-bold text-center">
         Made using the <a class="text-decoration-none" href="https://rickandmortyapi.com/" target="_blank">Rick & Morty
