--- a/html/creators.html
+++ b/html/creators.html
@@ -45,15 +45,8 @@
 
     <div class="row justify-content-center my-3" id="ratingCard"></div>
 
-    <div class="row justify-content-center my-3">
-        <div class="card bg-info bg-gradient" style="width: 40rem;">
-            <div class="card-body text-white text-center">
-                <h2 class="card-title text-center" style="text-shadow: 2px 2px 2px #000000;">Facts</h2>
-
-                <div class="accordion" id="accordionParent"></div>
-
-            </div>
-        </div>
+    <div class="row justify-content-center my-3" id="accordionCard">
+        <div class="accordion" id="accordionParent"></div>
     </div>
 
     <div class="row justify-content-center my-3" id="viewershipCard"></div>
