nav bar reference links

--- a/html/creators.html
+++ b/html/creators.html
@@ -26,16 +26,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mb-auto">
                 <li class="nav-item active">
-                    <a class="nav-link mx-sm-2 text-white nav-text" href="index.html">Home</a>
+                    <a class="nav-link mx-sm-2 text-white nav-text" href="/html/index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mx-sm-2 text-white nav-text" href="portal.html">Portal</a>
+                    <a class="nav-link mx-sm-2 text-white nav-text" href="/html/portal.html">Portal</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mx-sm-2 text-white nav-text" href="seasons.html">Seasons</a>
+                    <a class="nav-link mx-sm-2 text-white nav-text" href="/html/seasons.html">Seasons</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mx-sm-2 text-white nav-text" href="creators.html">Creators</a>
+                    <a class="nav-link mx-sm-2 text-white nav-text" href="/html/creators.html">Creators</a>
                 </li>
             </ul>
         </div>
