--- a/html/portal.html
+++ b/html/portal.html
@@ -25,16 +25,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mb-auto">
                 <li class="nav-item active">
-                    <a class="nav-link mx-sm-2 text-white" href="index.html">Home</a>
+                    <a class="nav-link mx-sm-2 text-white" href="/html/index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mx-sm-2 text-white" href="portal.html">Portal</a>
+                    <a class="nav-link mx-sm-2 text-white" href="/html/portal.html">Portal</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mx-sm-2 text-white" href="seasons.html">Seasons</a>
+                    <a class="nav-link mx-sm-2 text-white" href="/html/seasons.html">Seasons</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mx-sm-2 text-white" href="creators.html">Creators</a>
+                    <a class="nav-link mx-sm-2 text-white" href="/html/creators.html">Creators</a>
                 </li>
             </ul>
             <form class="d-flex d-sm-inline-flex my-2 my-lg-0">
