--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <link rel="icon" type="image/x-icon" href="../assets/rickDerp.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="/JSwebsite/css/main.css">
 </head>
 
 <body class="backgroundImage">
 
   <nav class="navbar navbar-expand-lg" id="navbar">
     <a class="navbar-brand mx-2" href="#">
-      <img src="/assets/rick and morty logo top left.png" class="pb-2" alt="" width="120" height="45">
+      <img src="/JSwebsite/assets/rick and morty logo top left.png" class="pb-2" alt="" width="120" height="45">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,16 +26,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mb-auto">
         <li class="nav-item active">
-          <a class="nav-link mx-sm-2 text-white nav-text" href="/html/index.html">Home</a>
+          <a class="nav-link mx-sm-2 text-white nav-text" href="/JSwebsite/html/index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link mx-sm-2 text-white nav-text" href="/html/portal.html">Portal</a>
+          <a class="nav-link mx-sm-2 text-white nav-text" href="/JSwebsite/html/portal.html">Portal</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link mx-sm-2 text-white nav-text" href="/html/seasons.html">Seasons</a>
+          <a class="nav-link mx-sm-2 text-white nav-text" href="/JSwebsite/html/seasons.html">Seasons</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link mx-sm-2 text-white nav-text" href="/html/creators.html">Creators</a>
+          <a class="nav-link mx-sm-2 text-white nav-text" href="/JSwebsite/html/creators.html">Creators</a>
         </li>
       </ul>
       <form class="d-flex d-sm-inline-flex my-2 my-lg-0">
