--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mb-auto">
         <li class="nav-item active">
-          <a class="nav-link mx-sm-2 text-white nav-text" href="/JSwebsite/html/index.html">Home</a>
+          <a class="nav-link mx-sm-2 text-white nav-text" href="/JSwebsite/index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link mx-sm-2 text-white nav-text" href="/JSwebsite/html/portal.html">Portal</a>
