--- a/html/portal.html
+++ b/html/portal.html
@@ -23,7 +23,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mb-auto">
+            <ul class="navbar-nav mb-auto mx-sm-2">
                 <li class="nav-item active">
                     <a class="nav-link mx-sm-2 text-white" href="/JSwebsite/index.html">Home</a>
                 </li>
